sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: '<-' expected but ')' found.
		for (getNombreValeurs-2 to 0){
                                            ^AlgBubbleSort2:14: error: illegal start of simple expression
	}
        ^